[gd_scene load_steps=4 format=2]

[ext_resource path="res://sayhello.gd" type="Script" id=1]
[ext_resource path="res://Panel2.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_left = 21.0
margin_top = 89.0
margin_right = 465.0
margin_bottom = 223.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="Panel"]
margin_left = 57.3562
margin_top = 91.0034
margin_right = 165.356
margin_bottom = 111.003
text = "Press me !"

[node name="Button_AutoConnect" type="Button" parent="Panel"]
margin_left = 279.986
margin_top = 90.1849
margin_right = 387.986
margin_bottom = 110.185
text = "Press me !"

[node name="Label_button" type="Label" parent="Panel"]
margin_left = 34.0
margin_top = 23.0
margin_right = 189.0
margin_bottom = 37.0
text = "This is a label"
align = 1

[node name="Label_button_Auto_Connect" type="Label" parent="Panel"]
margin_left = 254.993
margin_top = 23.0
margin_right = 409.993
margin_bottom = 37.0
text = "This is a label"
align = 1

[node name="Panel2" type="Panel" parent="."]
margin_left = 30.0
margin_top = 295.0
margin_right = 453.0
margin_bottom = 445.0
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Panel2"]
autostart = true

[node name="Sprite" type="Sprite" parent="Panel2"]
position = Vector2( 124.411, 85.1231 )
texture = ExtResource( 3 )
[connection signal="pressed" from="Panel/Button_AutoConnect" to="Panel" method="_on_Button_AutoConnect_pressed"]
